Correct two z-indexes
Follow up to Ia3a15bc6d159eb825560f33dd61ec167faa90b39
At mobile resolutions the navigation and wiki tools menu should
appear below sticky header.

--- a/resources/screen-desktop-small.less
+++ b/resources/screen-desktop-small.less
@@ -78,7 +78,7 @@
 	border-top: solid 2px @base80;
 	display: block;
 	position: absolute;
-	z-index: ( @z-index-fixed + 1 );
+	z-index: ( @z-index-fixed - 2 );
 	background: @background;
 	width: 100%;
 }
