--- a/resources/screen-desktop.less
+++ b/resources/screen-desktop.less
@@ -77,7 +77,7 @@ div.mw-notification-area {
 #mw-header-nav-hack,
 #mw-header-hack {
 	position: fixed;
-	z-index: @z-index-fixed;
+	z-index: @z-index-fixed - 3;
 	top: @fixed-header-height;
 	box-shadow: 0 3px 3px 2px rgba( 0, 0, 0, 0.075 ), 0 0 2px rgba( 0, 0, 0, 0.2 );
 }
